--- a/.github/workflows/auto-move.yml
+++ b/.github/workflows/auto-move.yml
@@ -12,5 +12,5 @@ jobs:
         uses: peter-evans/project-actions@v2
         with:
           project: 'InnmobiliariaOficial_365Soft'
-          column: 'In Review'
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          column: 'In review'
+          token: ${{ secrets.GITHUB_TOKEN }}
