--- a/.github/workflows/auto-move.yml
+++ b/.github/workflows/auto-move.yml
@@ -1,21 +1,19 @@
-name: Move linked issue to "In Review" when PR is opened
+name: Move linked issue to "In Review" (Projects v2)
 
 on:
   pull_request:
     types: [opened, reopened, ready_for_review]
 
 jobs:
-  move-issue:
+  move-issue-v2:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Move linked issue to 'In Review'
-        uses: peter-evans/create-or-update-project-card@v3
+      - name: Move linked issue to "In Review"
+        uses: titoportas/update-project-fields@v2
         with:
-          token: ${{ secrets.ORG_PAT }}
-          project-location: organization
-          project-name: 'ProyectInmobiliariaOficial'
-          column-name: 'In review'
-          issue-number: ${{ github.event.pull_request.number }}
+          github-token: ${{ secrets.ORG_PAT }}
+          organization: 365Soft-Bolivia
+          project-number: 1               # <- es el número que aparece en tu URL (/projects/1/)
+          item-id: ${{ github.event.pull_request.node_id }}
+          field: Status                   # <- nombre del campo (columna) en tu project
+          value: "In review"              # <- el valor exacto del campo (columna)
